--- a/emperio/nbproject/project.properties
+++ b/emperio/nbproject/project.properties
@@ -27,9 +27,53 @@ dist.dir=dist
 dist.jar=${dist.dir}/emperio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.9.3.jar=commons-beanutils-1.9.3.jar
+file.reference.commons-beanutils-1.9.4.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\commons-beanutils-1.9.4.jar
+file.reference.commons-beanutils-1.9.4.jar-1=commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.2.jar=commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-1=commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=commons-digester-2.1.jar
+file.reference.commons-lang3-3.6.jar=commons-lang3-3.6.jar
+file.reference.commons-logging-1.2.jar=commons-logging-1.2.jar
+file.reference.commons-text-1.1.jar=commons-text-1.1.jar
+file.reference.jasperreports-6.16.0.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\jasperreports-6.16.0.jar
+file.reference.jasperreports-6.16.0.jar-1=jasperreports-6.16.0.jar
+file.reference.jasperreports-fonts-6.16.0.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\jasperreports-fonts-6.16.0.jar
+file.reference.jasperreports-fonts-6.16.0.jar-1=jasperreports-fonts-6.16.0.jar
+file.reference.jasperreports-javaflow-6.13.0.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\jasperreports-javaflow-6.13.0.jar
+file.reference.jasperreports-javaflow-6.13.0.jar-1=jasperreports-javaflow-6.13.0.jar
+file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar-1=mysql-connector-java-8.0.22.jar
+file.reference.opencsv-4.1.jar=opencsv-4.1.jar
+file.reference.org-apache-commons-logging.jar=C:\\Users\\ROSS\\Desktop\\Gestiondcl\\org-apache-commons-logging.jar
+file.reference.org-apache-commons-logging.jar-1=org-apache-commons-logging.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.jasperreports-6.16.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.16.0.jar}:\
+    ${file.reference.jasperreports-javaflow-6.13.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}:\
+    ${file.reference.commons-beanutils-1.9.3.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-1}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-collections4-4.4.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-lang3-3.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-text-1.1.jar}:\
+    ${file.reference.jasperreports-6.16.0.jar-1}:\
+    ${file.reference.jasperreports-fonts-6.16.0.jar-1}:\
+    ${file.reference.jasperreports-javaflow-6.13.0.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar-1}:\
+    ${file.reference.opencsv-4.1.jar}:\
+    ${file.reference.org-apache-commons-logging.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
