--- a/emperio/nbproject/private/private.properties
+++ b/emperio/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\am_ba\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=/home/haitch/.netbeans/8.2/build.properties
