--- a/emperio/nbproject/private/private.properties
+++ b/emperio/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ROSS\\AppData\\Roaming\\NetBeans\\8.1rc\\build.properties
+user.properties.file=/home/haitch/.netbeans/8.2/build.properties
